environments/dev/kubernetes/gateway/argocd-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: default
spec:
  parentRefs:
    - name: nginx-gateway
  hostnames:
    - argocd.wawangholanda.biz.id
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
