environments/dev/kubernetes/gateway/nginx-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-route
  namespace: default
spec:
  parentRefs:
    - name: nginx-gateway
  rules:
    - backendRefs:
        - name: nginx
          namespace: demo
          port: 80
